Fix mis-aligned grid for <ul>s inside definitions

--- a/assets/css/structures/_definition-content.scss
+++ b/assets/css/structures/_definition-content.scss
@@ -35,6 +35,10 @@
       grid-column: 1 / -1;
       line-height: 1.4;
     }
+    
+    & > ul {
+      grid-column: 1 / -1;
+    }
 
     & h2 {
       flex: 0 1 auto;
